--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Task helpers for web projects.",
   "main": "lib/index.js",
   "scripts": {
-    "postinstall": "rm -rf lib && babel src -d lib",
+    "prepublish": "rm -rf lib && babel src -d lib",
     "build": "rm -rf lib && babel src -d lib",
     "watch": "rm -rf lib && babel src -w -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "babel": "^5.8.21",
     "browser-sync": "^2.8.2",
     "bs-html-injector": "^2.0.4",
     "chalk": "^1.1.0",
@@ -19,12 +18,13 @@
     "node-notifier": "^4.2.3",
     "nodegit": "^0.4.1",
     "rimraf": "^2.4.2",
-    "rsyncwrapper": "^0.4.3"
+    "rsyncwrapper": "^0.4.3",
     "webpack": "^1.11.0"
   },
   "devDependencies": {
+    "babel": "^5.8.21",
     "eslint": "^0.24.1",
-    "eslint-plugin-babel": "^1.2.0",
+    "eslint-plugin-babel": "^1.2.0"
   },
   "repository": {
     "type": "git",
